--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="reset.css" />
     <link
       rel="stylesheet"
@@ -22,7 +26,7 @@
     <header class="cabecalho">
       <div class="container">
         <input type="checkbox" id="menu" class="container__botao" />
-        <label for="menu">
+        <label for="menu" class="container__rotulo">
           <span class="cabecalho__menu-hamburguer container__imagem"></span>
         </label>
         <ul class="lista-menu">
@@ -48,26 +52,64 @@
           alt="Logo da Alurabooks"
           class="container__imagem"
         />
+
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura</b>Books
+        </h1>
       </div>
+      <ul class="opções">
+        <input type="checkbox" id="opções_menu" class="opções__botão" />
+        <label for="opções_menu" class="opções__rotulo">
+          <li class="opções__item">Categorias</li>
+        </label>
+
+        <ul class="lista-menu">
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programação</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Front-end</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Infraestrutura</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Business</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Design & UX</a>
+          </li>
+        </ul>
+        <li class="opções__item">
+          <a href="#" class="opções__item"></a>Favoritos
+        </li>
+        <li class="opções__item">
+          <a href="#" class="opções__item"></a>Minha estante
+        </li>
+      </ul>
+
       <div class="container">
         <a href="#"
           ><img
             src="img/Favoritos.svg"
             alt="Meus Favoritos"
-            class="container__imagem"
-        /></a>
-        <a href="#"
+            class="container__imagem container__imagem-trasparente"
+          />
+        </a>
+        <a href="#" class="container__link"
           ><img
             src="img/Compras.svg"
             alt="Carrinho de Compras"
-            class="container__imagem"
-        /></a>
-        <a href="#"
+            class="container__imagem"/>
+            <p class="container__texto">Minha sacola</p>
+      </a>
+        <a href="#" class="container__link"
           ><img
             src="img/Usuario.svg"
             alt="Meu perfil"
-            class="container__imagem"
-        /></a>
+            class="container__imagem"/>
+            <p class="container__texto">Meu perfil</p>
+          </a>
       </div>
     </header>
     <section class="banner">
@@ -84,6 +126,8 @@
     <section class="carrossel">
       <h2 class="carrossel__titulo">Novos Lançamentos</h2>
       <!-- Slider main container -->
+
+      <div class="carrossel__container">
       <div class="swiper">
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
@@ -154,11 +198,13 @@
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
+    </div>
     </section>
 
     <section class="carrossel">
       <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
       <!-- Slider main container -->
+      <div class="carrossel__container">
       <div class="swiper">
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
@@ -230,6 +276,7 @@
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
+    </div>
     </section>
 
     <section class="tópicos">
@@ -263,11 +310,102 @@
     </section>
 
     <section class="contato">
+      <div class="contato__descrição">
         <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email"> 
+        <p class="contato__texto">
+          Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+      </div>
+      <input
+        type="email"
+        placeholder="Cadastre seu e-mail"
+        class="contato__email"
+      />
     </section>
 
+    <hr />
+
+    <footer class="rodapé">
+      <h2 class="rodapé__titulo">Grupo Alura</h2>
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Educação</li>
+        <li class="lista-rodapé__item">
+          <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código" />
+          <a href="#" class="lista-rodapé__link">Casa do código</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/Caelum.svg" alt="logo da Caelum" />
+          <a href="#" class="lista-rodapé__link">Caelum</a>
+        </li>
+      </ul>
+
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Educação online</li>
+        <li class="lista-rodapé__item">
+          <img src="img/Alura.svg" alt="logo da alura" />
+          <a href="#" class="lista-rodapé__link">Alura</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/AluraEmpresas.svg" alt="logo da alura empresas" />
+          <a href="#" class="lista-rodapé__link">Alura Para Empresas</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/AluraLatam.svg" alt="logo da alura latam" />
+          <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/AluraStart.svg" alt="logo da alura start" />
+          <a href="#" class="lista-rodapé__link">Alura Start</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/MusicDot.svg" alt="logo da musicdot" />
+          <a href="#" class="lista-rodapé__link">MusicDot</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/AluraLingua.svg" alt="logo da alura língua" />
+          <a href="#" class="lista-rodapé__link">Alura Língua</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/PM3.svg" alt="logo da pm3" />
+          <a href="#" class="lista-rodapé__link">PM3</a>
+        </li>
+      </ul>
+
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Comunidade</li>
+        <li class="lista-rodapé__item">
+          <img src="img/HipstersTech.svg" alt="logo da hipsters tech" />
+          <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/Scuba.svg" alt="logo da Scuba" />
+          <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/Layers.svg" alt="logo da Layers ponto tech" />
+          <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/LikeABoss.svg" alt="logo da Like A Boss" />
+          <a href="#" class="lista-rodapé__link">Like a Boss</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img
+            src="img/CarreiraSemFronteira.svg"
+            alt="logo da Carreira Sem Fronteira"
+          />
+          <a href="#" class="lista-rodapé__link">Carreira sem Fronteira</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/HipstersJobs.svg" alt="logo da Hipsters Jobs" />
+          <a href="#" class="lista-rodapé__link">Hipsters ponto Jobs</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/GUJ.svg" alt="logo da GUJ" />
+          <a href="#" class="lista-rodapé__link">GUJ</a>
+        </li>
+      </ul>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
